[fluentd-elasticsearch] Allow metrics svc to be force generated (#235)
* Allow metrics svc to be force generated

Adds a .Values.serviceMetric.enabled key to be backwards compatible
with the .Values.serviceMonitor.enabled, which then lets us use
either key to generate the metrics service without needing to
create the servicemonitor resource as well. This lets us
decouple the monitoring to a reasonable extent

Signed-off-by: BenWUKFast <24794641+BenWUKFast@users.noreply.github.com>

* Added serviceMetric.enabled to readme

Signed-off-by: BenWUKFast <24794641+BenWUKFast@users.noreply.github.com>

* bump the version number

Signed-off-by: BenWUKFast <24794641+BenWUKFast@users.noreply.github.com>

* Alternative documentation

Signed-off-by: BenWUKFast <24794641+BenWUKFast@users.noreply.github.com>

* Version bump

Signed-off-by: BenWUKFast <24794641+BenWUKFast@users.noreply.github.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -198,6 +198,12 @@ serviceMonitor:
   port: 24231
   labels: {}
 
+serviceMetric:
+  ## If true, the metrics service will be created
+  ## Alternative to implicit creation through serviceMonitor.enabled
+  ##
+  enabled: false
+
 prometheusRule:
   ## If true, a PrometheusRule CRD is created for a prometheus operator
   ## https://github.com/coreos/prometheus-operator
