Ensure concat plugin does not drop messages. (#266)
This fix ensures that if fluentd concat plugin generates error due to
timeout in processing, then message will be processed by other filters
and thus end in elasticsearch (even if not fully parsed).

Fixes error messages such as:
[warn]: dump an error event:
error_class=Fluent::Plugin::ConcatFilter::TimeoutError
error="Timeout flush: node-problem-detector:default"
location=nil ...

For reference see:
https://github.com/fluent-plugins-nursery/fluent-plugin-concat#usage
or
https://github.com/helm/charts/pull/16871 under path
stable/sumologic-fluentd/files/file.source.containers.conf

Signed-off-by: Michał Sochoń <kaszpir@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -155,6 +155,8 @@ data:
       key message
       multiline_end_regexp /\n$/
       separator ""
+      timeout_label @NORMAL
+      flush_interval 5
     </filter>
 
     # Enriches records with Kubernetes metadata
@@ -467,6 +469,13 @@ data:
 
 {{- if .Values.configMaps.useDefaults.outputConf }}
   output.conf: |-
+    # handle timeout log lines from concat plugin
+    <match **>
+      @type relabel
+      @label @NORMAL
+    </match>
+
+    <label @NORMAL>
     <match **>
       @id elasticsearch
       @type elasticsearch
@@ -502,6 +511,7 @@ data:
         overflow_action block
       </buffer>
     </match>
+    </label>
 {{- end }}
 
 {{- range $key, $value := .Values.extraConfigMaps }}
