[fluentd-elasticsearch] Add systemd field strip underscores and field lowercase to other sources (#267)
* Add systemd field strip underscores and field lowercase to other sources

Ensure that field names are all lowercase.
Ensure that fields do not start with underscore.

Both above options makes fields indexable by elasticsearch, improving
ability to search for the desired content.

Unfortunately this will break dashboards/queries that expect
that certain fields are starting with underscore or are all in capital
letters.

Example:
`_PID` will become `pid`
`PRIORITY` will become `priority`
`_some_field` will become `some_field`

For reference please see:
https://github.com/fluent-plugin-systemd/fluent-plugin-systemd#filter-plugin-configuration

Signed-off-by: Michał Sochoń <kaszpir@gmail.com>

* Bump chart version, expand readme about upgrade to 6.0.0

Signed-off-by: Michał Sochoń <kaszpir@gmail.com>

* added headings to upgrading section

* reorganized readme a bit

Co-authored-by: André Bauer <monotek@users.noreply.github.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -355,6 +355,10 @@ data:
         persistent true
         path /var/log/journald-docker.pos
       </storage>
+      <entry>
+        fields_strip_underscores true
+        fields_lowercase true
+      </entry>
       read_from_head true
       tag docker
     </source>
@@ -368,6 +372,10 @@ data:
         persistent true
         path /var/log/journald-container-runtime.pos
       </storage>
+      <entry>
+        fields_strip_underscores true
+        fields_lowercase true
+      </entry>
       read_from_head true
       tag container-runtime
     </source>
@@ -381,6 +389,10 @@ data:
         persistent true
         path /var/log/journald-kubelet.pos
       </storage>
+      <entry>
+        fields_strip_underscores true
+        fields_lowercase true
+      </entry>
       read_from_head true
       tag kubelet
     </source>
@@ -394,6 +406,10 @@ data:
         persistent true
         path /var/log/journald-node-problem-detector.pos
       </storage>
+      <entry>
+        fields_strip_underscores true
+        fields_lowercase true
+      </entry>
       read_from_head true
       tag node-problem-detector
     </source>
