fluentd-elasticsearch: Support adding relabelings to ServiceMonitor (#271)
* fluentd-elasticsearch: Support adding relabelings to ServiceMonitor

Signed-off-by: Robin Ketelbuters <robin.ketelbuters@gmail.be>

* fluentd-elasticsearch: Document variables in the README

Signed-off-by: Robin Ketelbuters <robin.ketelbuters@gmail.be>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -197,6 +197,8 @@ serviceMonitor:
   path: /metrics
   port: 24231
   labels: {}
+  metricRelabelings: []
+  relabelings: []
 
 serviceMetric:
   ## If true, the metrics service will be created
