[fluentd-elasticsearch] Allow to switch output type. (#300)
* Allow to switch output type.

Signed-off-by: Denis Boulas <dene14@gmail.com>

* Bumped chart version.

Signed-off-by: Denis Boulas <dene14@gmail.com>

* fixed typo

Co-authored-by: André Bauer <monotek@users.noreply.github.com>

--- a/charts/fluentd-elasticsearch/templates/configmaps.yaml
+++ b/charts/fluentd-elasticsearch/templates/configmaps.yaml
@@ -494,7 +494,7 @@ data:
     <label @NORMAL>
     <match **>
       @id elasticsearch
-      @type elasticsearch
+      @type "#{ENV['OUTPUT_TYPE']}"
       @log_level "#{ENV['OUTPUT_LOG_LEVEL']}"
       include_tag_key true
       host "#{ENV['OUTPUT_HOST']}"
