fluentd-elasticsearch Default metrics service type (#308)
Set the default type of the metrics service created.

Without this the service generated does not have a valid type.

Document the variable in the README.

Signed-off-by: Lefteris Kritikos <lefteris.kritikos@habito.com>

--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -200,6 +200,7 @@ serviceMonitor:
   labels: {}
   metricRelabelings: []
   relabelings: []
+  type: ClusterIP
 
 serviceMetric:
   ## If true, the metrics service will be created
