Add support for setting the `awsSigningSidecar`'s remote read timeout; addedin `v1.0` of `aws-es-proxy` (#328)
https://github.com/abutaha/aws-es-proxy/releases/tag/v1.0

Previously the default seemed to be taken from GoLang|OS; leading to ~15 minute downtime if connections to ElasticSearch are terminated/dropped on the remote side; e.g during an AWS ElasticSearch domain upgrade.

Signed-off-by: Chad Wilson <chadw@thoughtworks.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -166,7 +166,8 @@ spec:
         image: {{ .Values.awsSigningSidecar.image.repository }}:{{ .Values.awsSigningSidecar.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         args: ["-endpoint", "{{ .Values.elasticsearch.scheme }}://{{ .Values.elasticsearch.host }}:{{ .Values.elasticsearch.port }}",
-               "-listen",   "{{ .Values.awsSigningSidecar.network.address }}:{{ .Values.awsSigningSidecar.network.port }}"]
+               "-listen",   "{{ .Values.awsSigningSidecar.network.address }}:{{ .Values.awsSigningSidecar.network.port }}",
+               "-timeout",  "{{ .Values.awsSigningSidecar.network.remoteReadTimeoutSeconds }}"]
         env:
         - name: PORT_NUM
           value: {{ .Values.awsSigningSidecar.network.port | quote }}
