[fluentd-elasticsearch] fix service template rendering (#360)
Issue triggered when defining any service port as .Capabilities cannot
be evaluated inside a range loop.

Signed-off-by: Alex Snast <alexsn@fb.com>

--- a/charts/fluentd-elasticsearch/templates/service.yaml
+++ b/charts/fluentd-elasticsearch/templates/service.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.service }}
 {{- range $port := .Values.service.ports  }}
 {{- $service_type := $port.type | default "ClusterIP" }}
-{{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
+{{- $striped_version := (split "-" $.Capabilities.KubeVersion.GitVersion)._0 -}}
 ---
 apiVersion: v1
 kind: Service
