--- a/charts/fluentd-elasticsearch/templates/role.yaml
+++ b/charts/fluentd-elasticsearch/templates/role.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.podSecurityPolicy.enabled }}
 {{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ template "fluentd-elasticsearch.fullname" . }}
