--- a/charts/fluentd-elasticsearch/templates/rolebinding.yaml
+++ b/charts/fluentd-elasticsearch/templates/rolebinding.yaml
@@ -1,7 +1,7 @@
 
 {{- if .Values.podSecurityPolicy.enabled }}
 {{- $striped_version := (split "-" .Capabilities.KubeVersion.GitVersion)._0 -}}
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ template "fluentd-elasticsearch.fullname" . }}
