--- a/charts/mysqldump/templates/cron.yaml
+++ b/charts/mysqldump/templates/cron.yaml
@@ -1,5 +1,5 @@
 {{- if ne .Values.schedule "now" -}}
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ template "mysqldump.fullname" . }}
